Fix and changelog