@@ -33,27 +33,23 @@ import ca.uhn.fhir.jpa.binary.api.IBinaryTarget;
 import ca.uhn.fhir.jpa.binary.api.StoredDetails;
 import ca.uhn.fhir.jpa.binary.provider.BinaryAccessProvider;
 import ca.uhn.fhir.jpa.model.util.JpaConstants;
-import ca.uhn.fhir.rest.api.server.IPreResourceAccessDetails;
 import ca.uhn.fhir.rest.api.server.IPreResourceShowDetails;
 import ca.uhn.fhir.rest.api.server.RequestDetails;
-import ca.uhn.fhir.rest.api.server.SimplePreResourceAccessDetails;
 import ca.uhn.fhir.rest.api.server.storage.TransactionDetails;
 import ca.uhn.fhir.rest.server.exceptions.InternalErrorException;
 import ca.uhn.fhir.rest.server.exceptions.InvalidRequestException;
-import ca.uhn.fhir.rest.server.exceptions.ResourceNotFoundException;
 import ca.uhn.fhir.rest.server.servlet.ServletRequestDetails;
 import ca.uhn.fhir.rest.server.util.CompositeInterceptorBroadcaster;
 import ca.uhn.fhir.util.HapiExtensions;
 import ca.uhn.fhir.util.IModelVisitor2;
 import org.apache.commons.io.FileUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.hl7.fhir.instance.model.api.IBase;
-import org.hl7.fhir.instance.model.api.IBaseBinary;
 import org.hl7.fhir.instance.model.api.IBaseHasExtensions;
 import org.hl7.fhir.instance.model.api.IBaseResource;
 import org.hl7.fhir.instance.model.api.IIdType;
 import org.hl7.fhir.instance.model.api.IPrimitiveType;
 import org.hl7.fhir.r4.model.IdType;
-import org.hl7.fhir.r4.model.Request;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -124,8 +120,7 @@ public class BinaryStorageInterceptor<T extends IPrimitiveType<byte[]>> {
 			.stream()
 			.flatMap(t -> ((IBaseHasExtensions) t).getExtension().stream())
 			.filter(t -> HapiExtensions.EXT_EXTERNALIZED_BINARY_ID.equals(t.getUrl()))
-			.map(t -> ((IPrimitiveType<?>) t.getValue()).getValueAsString())
-			.collect(Collectors.toList());
+			.map(t -> ((IPrimitiveType<?>) t.getValue()).getValueAsString()).toList();
 
 		for (String next : attachmentIds) {
 			myBinaryStorageSvc.expungeBlob(theResource.getIdElement(), next);
@@ -164,9 +159,9 @@ public class BinaryStorageInterceptor<T extends IPrimitiveType<byte[]>> {
 						.filter(t -> t.getUserData(JpaConstants.EXTENSION_EXT_SYSTEMDEFINED) == null)
 						.filter(t -> EXT_EXTERNALIZED_BINARY_ID.equals(t.getUrl()))
 						.map(t -> (IPrimitiveType<?>) t.getValue())
-						.map(t -> t.getValueAsString())
-						.filter(t -> isNotBlank(t))
-						.forEach(t -> existingBinaryIds.add(t));
+						.map(IPrimitiveType::getValueAsString)
+						.filter(StringUtils::isNotBlank)
+						.forEach(existingBinaryIds::add);
 				}
 			}
 		}
@@ -180,8 +175,8 @@ public class BinaryStorageInterceptor<T extends IPrimitiveType<byte[]>> {
 					.filter(t -> t.getUserData(JpaConstants.EXTENSION_EXT_SYSTEMDEFINED) == null)
 					.filter(t -> t.getUrl().equals(EXT_EXTERNALIZED_BINARY_ID))
 					.map(t -> (IPrimitiveType<?>) t.getValue())
-					.map(t -> t.getValueAsString())
-					.filter(t -> isNotBlank(t))
+					.map(IPrimitiveType::getValueAsString)
+					.filter(StringUtils::isNotBlank)
 					.filter(t -> !existingBinaryIds.contains(t))
 					.findFirst();
 
@@ -215,11 +210,11 @@ public class BinaryStorageInterceptor<T extends IPrimitiveType<byte[]>> {
 					String newBlobId;
 					if (resourceId.hasIdPart()) {
 						ByteArrayInputStream inputStream = new ByteArrayInputStream(data);
-						StoredDetails storedDetails = myBinaryStorageSvc.storeBlob(resourceId, null, nextContentType, inputStream);
+						StoredDetails storedDetails = myBinaryStorageSvc.storeBlob(resourceId, null, nextContentType, inputStream, theRequestDetails);
 						newBlobId = storedDetails.getBlobId();
 					} else {
 						assert thePointcut == Pointcut.STORAGE_PRESTORAGE_RESOURCE_CREATED : thePointcut.name();
-						newBlobId = myBinaryStorageSvc.newBlobId();
+						newBlobId = myBinaryStorageSvc.newBlobId(theRequestDetails, nextContentType);
 
 						String prefix = invokeAssignBlobPrefix(theRequestDetails, theResource);
 						if (isNotBlank(prefix)) {
@@ -257,7 +252,7 @@ public class BinaryStorageInterceptor<T extends IPrimitiveType<byte[]>> {
 
 	@Nonnull
 	private List<DeferredBinaryTarget> getOrCreateDeferredBinaryStorageMap(TransactionDetails theTransactionDetails) {
-		return theTransactionDetails.getOrCreateUserData(getDeferredListKey(), () -> new ArrayList<>());
+		return theTransactionDetails.getOrCreateUserData(getDeferredListKey(), ArrayList::new);
 	}
 
 	@Hook(Pointcut.STORAGE_PRECOMMIT_RESOURCE_CREATED)
@@ -273,7 +268,7 @@ public class BinaryStorageInterceptor<T extends IPrimitiveType<byte[]>> {
 				IBinaryTarget target = next.getBinaryTarget();
 				InputStream dataStream = next.getDataStream();
 				String contentType = target.getContentType();
-				myBinaryStorageSvc.storeBlob(resourceId, blobId, contentType, dataStream);
+				myBinaryStorageSvc.storeBlob(resourceId, blobId, contentType, dataStream, new ServletRequestDetails());
 			}
 		}
 	}
